# brot2

./: .cproject  .gitignore  .project  AUTHORS  Fractal.cpp  Fractal.h  Makefile  Makefile.am  Mandelbar.cpp  Mandelbrots.cpp  NEWS  PORTING  Plot.cpp  Plot.h  Plot2.cpp  Plot2.h  README  TODO-brot2-local  acinclude.m4  brot2.c  brot2.xpm  config.h.in  configure.ac  docker-build.sh  encodestring.pl  logo.h  logo.xcf  main.cpp  mandel.c  mandel.h  mandelbrot.c  mandelbrot.h  palette.cpp  palette.h  ui.xml  version.h
.github/workflows/: deb.yml
benchmark/: Benchmarkable.cpp  Benchmarkable.h  benchmark.cpp  benchmark2.cpp  palette_benchmark.cpp  plot_benchmark.cpp
cli/: .gitignore  CLIDataSink.cpp  CLIDataSink.h  Makefile.am  climain.cpp  climain.h  reporter.cpp  reporter.h
debian/: brot2.1  brot2.install  brot2.manpages  brot2cli.1  changelog  control  copyright  menu  rules
gtest/: Makefile.am
gtkui/: Canvas.cpp  Canvas.h  ColourPanel.cpp  ColourPanel.h  ControlsWindow.cpp  ControlsWindow.h  DragRectangle.cpp  DragRectangle.h  HUD.cpp  HUD.h  MainWindow.cpp  MainWindow.h  Makefile.am  Menus.cpp  Menus.h  MouseHelp.cpp  MouseHelp.h  MovieMode.h  MovieProgress.cpp  MovieProgress.h  MovieRender-PNG.cpp  MovieRender-libav.cpp  MovieRender.cpp  MovieRender.h  MovieWindow.cpp  MovieWindow.h  ParamsDialog.cpp  ParamsDialog.h  PrefsDialog.cpp  PrefsDialog.h  SaveAsPNG.cpp  SaveAsPNG.h  gtkmain.cpp  gtkmain.h  gtkutil.cpp  gtkutil.h  misc.h  ui.xml  uixml.h
hayai/: hayai-test.hpp
libbrot2/: .gitignore  BaseHUD.cpp  BaseHUD.h  BurningShip.cpp  ChunkDivider.cpp  ChunkDivider.h  Easing.cpp  Easing.h  Exception.h  Fractal.cpp  Fractal.h  IJob.h  IJobEngine.h  IMovieProgress.h  IPlot3DataSink.h  IRenderProgress.h  Makefile.am  Mandelbar.cpp  Mandelbrots.cpp  Mandeldrop.cpp  Misc.cpp  MovieMode.cpp  MovieMode.h  MovieMotion.cpp  MovieMotion.h  MovieNullProgress.cpp  MovieRender.cpp  MovieRender.h  Plot2.cpp  Plot2.h  Plot3.cpp  Plot3.h  Plot3Chunk.cpp  Plot3Chunk.h  Plot3Pass.cpp  Plot3Pass.h  Plot3Plot.cpp  Plot3Plot.h  Prefs.cpp  Prefs.h  (+25 more)
libbrot2/job/: IJob.h  IJobEngine.h  MultiThreadJobEngine.cpp  MultiThreadJobEngine.h  SimpleAsyncJobEngine.cpp  SimpleAsyncJobEngine.h  SimpleJobEngine.cpp
libfractal/: Fractal-internals.h  Fractal.cpp  Fractal.h  FractalMaths.h  Makefile.am  Mandelbar.cpp  Mandelbrots.cpp  Mandeldrop.cpp  Misc.cpp  Registry.h
libjob/: IGlibSlottedJobEngine.h  IJob.h  IJobEngine.h  Makefile.am  MultiThreadJobEngine.cpp  MultiThreadJobEngine.h  SimpleJobEngine.cpp  SimpleJobEngine.h  ThreadPool.cpp  ThreadPool.h
messages/: b2dumpmsg.cpp  brot2msgs.proto
misc/: brot2.desktop  docker-debbuild.sh  logo.xcf  logo512.xcf
test/: FractalKAT.cpp  JobsTest.cpp  JobsTestBits.h  Makefile.am  MockFractal.cpp  MockFractal.h  MockPalette.h  MockPrefs.cpp  MockPrefs.h  MovieTest.cpp  Plot3Test.cpp  PrefsT.cpp  PrefsT.h  Render2Test.cpp  TestPrefs.cpp  TestPrefs.h  b2test.cpp  b2test.valgrind  b2test.vgsupp  marshaltest.cpp  thrash
